--- a/assignment2/package.json
+++ b/assignment2/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assignment2",
   "version": "0.1.0",
-  "homepage": "https://prashantkumardagur.github.io/CipherSchools",
+  "homepage": "https://prashantkumardagur.github.io/CipherSchools/assignment2/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
